Components are now part of the module

--- a/UI/financial_manager/src/app/modules/transaction/components/transactions/transactions.component.html
+++ b/UI/financial_manager/src/app/modules/transaction/components/transactions/transactions.component.html
@@ -3,9 +3,9 @@
 >
   <div class="h-full flex flex-col justify-between">
     <div>
-      <button class="w-full" mat-button>
+      <button class="w-full" mat-button (click)="createTransaction()">
         <mat-icon>add</mat-icon>
-        Створити нову статтю
+        Створити нову транзакцію
       </button>
       <hr />
     </div>
