--- a/UI/financial_manager/src/styles.css
+++ b/UI/financial_manager/src/styles.css
@@ -2,8 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 hr {
   margin: 0 10px !important;
