added transaction output

--- a/UI/financial_manager/src/app/modules/transaction/components/transactions/transactions.component.html
+++ b/UI/financial_manager/src/app/modules/transaction/components/transactions/transactions.component.html
@@ -9,8 +9,10 @@
       </button>
       <hr />
     </div>
-    <div class="grow mx-[10px]">
-      <app-transaction></app-transaction>
+    <div class="grow mx-[10px] overflow-y-auto">
+      @for (transaction of transactions; track transaction) {
+      <app-transaction [transaction]="transaction"></app-transaction>
+      }
     </div>
     <div>
       <hr />
