changed the format of date display in the component

--- a/UI/financial_manager/src/app/modules/transaction/components/transaction/transaction.component.html
+++ b/UI/financial_manager/src/app/modules/transaction/components/transaction/transaction.component.html
@@ -20,12 +20,20 @@
   <hr />
   <span class="block my-[5px]"
     >Створена:
-    {{ transactionDateService.formatDate(transaction?.createdAt!) }}</span
-  >
+    {{
+      transactionDateService.formatDate(
+        transaction?.createdAt!.toLocaleString()
+      )
+    }}
+  </span>
   @if (transaction?.transactionType === 'expense') {
   <span class="block"
     >Застосувати:
-    {{ transactionDateService.formatDate(transaction?.expenseDate!) }}</span
+    {{
+      transactionDateService.formatDate(
+        transaction?.expenseDate!.toLocaleString()
+      )
+    }}</span
   >
   }
 </div>
