--- a/UI/financial_manager/src/app/modules/transaction/components/transaction-creation/transaction-creation.component.html
+++ b/UI/financial_manager/src/app/modules/transaction/components/transaction-creation/transaction-creation.component.html
@@ -71,6 +71,9 @@
     </mat-form-field>
     }
   </form>
+  <span>
+    {{ errorMessage }}
+  </span>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button mat-dialog-close>Скасувати</button>
