paginator functionality has been implemented

--- a/UI/financial_manager/src/app/modules/transaction/components/transactions/transactions.component.html
+++ b/UI/financial_manager/src/app/modules/transaction/components/transactions/transactions.component.html
@@ -17,8 +17,9 @@
     <div>
       <hr />
       <mat-paginator
-        [length]="transactions.length"
-        [pageSize]="7"
+        (page)="pageHandler($event)"
+        [length]="totalTransactions"
+        [pageSize]="5"
         [hidePageSize]="true"
         [showFirstLastButtons]="true"
       ></mat-paginator>
