added display of transaction category

--- a/UI/financial_manager/src/app/modules/transaction/components/transaction/transaction.component.html
+++ b/UI/financial_manager/src/app/modules/transaction/components/transaction/transaction.component.html
@@ -14,7 +14,7 @@
     <span class="text-red-500"
       >-{{ transaction?.significance | currency }}</span
     >
-    <span>Health & Care</span>
+    <span>{{ transaction?.category?.title }}</span>
   </div>
   }
   <hr />
