--- a/UI/financial_manager/src/app/modules/homescreen/modules/transaction/components/transaction/transaction.component.html
+++ b/UI/financial_manager/src/app/modules/homescreen/modules/transaction/components/transaction/transaction.component.html
@@ -6,8 +6,11 @@
       {{ transaction?.title }}
     </p>
     <div class="flex items-center">
+      <button>
+        <mat-icon class="text-[#005CBB]">edit</mat-icon>
+      </button>
       <button (click)="deleteTransaction()">
-        <mat-icon>delete</mat-icon>
+        <mat-icon class="text-[#005CBB]">delete</mat-icon>
       </button>
     </div>
   </div>
