a component for creating a transaction category has been implemented

--- a/UI/financial_manager/src/app/modules/homescreen/modules/transaction/components/transaction-creation/transaction-creation.component.html
+++ b/UI/financial_manager/src/app/modules/homescreen/modules/transaction/components/transaction-creation/transaction-creation.component.html
@@ -56,9 +56,9 @@
           }}</mat-option>
           }
         </div>
-        <button class="w-full" mat-button>
+        <button (click)="opetCategoryCreationDialog()" class="w-full" mat-button>
           <mat-icon>add</mat-icon>
-          Створити нову транзакцію
+          Створити нову категорію
         </button>
         <hr />
         <mat-paginator
