--- a/UI/financial_manager/src/app/modules/homescreen/modules/transaction/components/transaction/transaction.component.html
+++ b/UI/financial_manager/src/app/modules/homescreen/modules/transaction/components/transaction/transaction.component.html
@@ -6,7 +6,7 @@
       {{ transaction?.title }}
     </p>
     <div class="flex items-center">
-      <button>
+      <button (click)="openTransactionEditingDialog()">
         <mat-icon class="text-[#005CBB]">edit</mat-icon>
       </button>
       <button (click)="deleteTransaction()">
