--- a/UI/financial_manager/src/app/modules/homescreen/modules/transaction/components/transactions/transactions.component.html
+++ b/UI/financial_manager/src/app/modules/homescreen/modules/transaction/components/transactions/transactions.component.html
@@ -1,31 +1,26 @@
-<div
-  class="w-[20%] border border-[#005CBB] size-full float-right rounded-xl overflow-hidden"
->
-  <div class="h-full flex flex-col justify-between">
-    <div>
-      <button class="w-full" mat-button (click)="createTransaction()">
-        <mat-icon>add</mat-icon>
-        Створити нову транзакцію
-      </button>
-      <hr />
+<div class="h-full max-h-full flex flex-col justify-between">
+  <div>
+    <button class="w-full" mat-button>
+      <mat-icon>add</mat-icon>
+      <span>Створити Транзакцію</span>
+    </button>
+    <hr />
+  </div>
+  <div class="grow overflow-y-auto h-[150px]">
+    @for (transaction of transactions; track transaction) {
+    <div class="border border-[#005CBB] rounded-xl h-fit my-[10px] p-[10px]">
+      <app-transaction [transaction]="transaction"></app-transaction>
     </div>
-    <div class="grow mx-[10px] overflow-y-auto">
-      @for (transaction of transactions; track transaction) {
-      <app-transaction
-        (deletedTransaction)="deleteTransaction(transaction)"
-        [transaction]="transaction"
-      ></app-transaction>
-      }
-    </div>
-    <div>
-      <hr />
-      <mat-paginator
-        (page)="pageHandler($event)"
-        [length]="userTranactionQuantity"
-        [pageSize]="packSize"
-        [hidePageSize]="true"
-        [showFirstLastButtons]="true"
-      ></mat-paginator>
-    </div>
+    }
+  </div>
+  <div>
+    <hr />
+    <mat-paginator
+      (page)="pageHandler($event)"
+      [length]="userTranactionQuantity"
+      [pageSize]="packSize"
+      [hidePageSize]="true"
+      [showFirstLastButtons]="true"
+    ></mat-paginator>
   </div>
 </div>
