the ability to edit a transaction has been implemented

--- a/financialManagerUI/src/app/modules/transaction/components/transaction-item/transaction-item.component.html
+++ b/financialManagerUI/src/app/modules/transaction/components/transaction-item/transaction-item.component.html
@@ -2,7 +2,7 @@
   <div class="flex items-center justify-between">
     <span class="text-xl">{{ transaction?.title }}</span>
     <div>
-      <button mat-icon-button>
+      <button mat-icon-button (click)="openTransactionEditingDialog()">
         <mat-icon class="text-[#ba005c]">edit</mat-icon>
       </button>
       <button mat-icon-button (click)="deleteTransaction()">
