--- a/financialManagerUI/src/app/modules/transaction/components/transactions/transactions.component.html
+++ b/financialManagerUI/src/app/modules/transaction/components/transactions/transactions.component.html
@@ -1,4 +1,4 @@
-@for (transaction of transactions(); track $index) {
+@for (transaction of transactions; track $index) {
 <div class="border border-[#ba005c] rounded-lg p-[15px]">
   <app-transaction-item [transaction]="transaction"></app-transaction-item>
 </div>
